--- a/Model/Database.csproj
+++ b/Model/Database.csproj
@@ -61,7 +61,7 @@
     <Compile Include="Entity\PRODUCT.cs" />
     <Compile Include="Entity\USERINFO.cs" />
     <Compile Include="Function\Security.cs" />
-    <Compile Include="Function\UserFunction.cs" />
+    <Compile Include="Function\Function.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
