--- a/EshopMVC/EshopMVC.csproj
+++ b/EshopMVC/EshopMVC.csproj
@@ -5675,6 +5675,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\Image\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
