--- a/EshopMVC/bin/EshopMVC.dll.config
+++ b/EshopMVC/bin/EshopMVC.dll.config
@@ -68,7 +68,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="OnlineShopDbContext" connectionString="data source=HUYANH\HuyAnhSQL;initial catalog=ONLINESHOP;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="OnlineShopDbContext" connectionString="data source=.;initial catalog=OnlineShop;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <providers>
