--- a/Model/Database.csproj
+++ b/Model/Database.csproj
@@ -48,6 +48,7 @@
     </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -61,6 +62,7 @@
     <Compile Include="Entity\PRODUCT.cs" />
     <Compile Include="Entity\USERINFO.cs" />
     <Compile Include="Function\CategoryFunction.cs" />
+    <Compile Include="Function\ProductFunction.cs" />
     <Compile Include="Function\Security.cs" />
     <Compile Include="Function\UserFunction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
