Top menu client

--- a/Model/Database.csproj
+++ b/Model/Database.csproj
@@ -58,10 +58,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entity\CATEGORY.cs" />
+    <Compile Include="Entity\Menu.cs" />
+    <Compile Include="Entity\MenuType.cs" />
     <Compile Include="Entity\OnlineShopDbContext.cs" />
     <Compile Include="Entity\PRODUCT.cs" />
     <Compile Include="Entity\USERINFO.cs" />
     <Compile Include="Function\CategoryFunction.cs" />
+    <Compile Include="Function\MenuFunction.cs" />
     <Compile Include="Function\ProductFunction.cs" />
     <Compile Include="Function\Security.cs" />
     <Compile Include="Function\UserFunction.cs" />
@@ -72,6 +75,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
