--- a/Model/Database.csproj
+++ b/Model/Database.csproj
@@ -82,12 +82,14 @@
     <Compile Include="Entity\Menu.cs" />
     <Compile Include="Entity\MenuType.cs" />
     <Compile Include="Entity\OnlineShopDbContext.cs" />
+    <Compile Include="Entity\Order.cs" />
+    <Compile Include="Entity\OrderDetail.cs" />
     <Compile Include="Entity\PRODUCT.cs" />
-    <Compile Include="Entity\ProductCategory.cs" />
+    <Compile Include="Entity\CategoryMenu.cs" />
     <Compile Include="Entity\Slide.cs" />
     <Compile Include="Entity\USERINFO.cs" />
     <Compile Include="Function\Admin\CategoryFunction.cs" />
-    <Compile Include="Function\Client\CategoryMenu.cs" />
+    <Compile Include="Function\Client\CategoryList.cs" />
     <Compile Include="Function\Client\MenuFunction.cs" />
     <Compile Include="Function\Admin\ProductFunction.cs" />
     <Compile Include="Function\Client\ProductFunction.cs" />
