--- a/Model/Database.csproj
+++ b/Model/Database.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Function\Client\CategoryList.cs" />
     <Compile Include="Function\Client\MenuFunction.cs" />
     <Compile Include="Function\Admin\ProductFunction.cs" />
+    <Compile Include="Function\Client\OrderFunction.cs" />
     <Compile Include="Function\Client\ProductFunction.cs" />
     <Compile Include="Function\Security.cs" />
     <Compile Include="Function\Client\SlideFunction.cs" />
