--- a/EshopMVC/EshopMVC.csproj
+++ b/EshopMVC/EshopMVC.csproj
@@ -56,6 +56,9 @@
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="PayPal, Version=1.9.1.0, Culture=neutral, PublicKeyToken=5b4afc1ccaef40fb, processorArchitecture=MSIL">
+      <HintPath>..\packages\PayPal.1.9.1\lib\net451\PayPal.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -142,12 +145,16 @@
     <Compile Include="Areas\Admin\Data\LoginModel.cs" />
     <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\NotFoundController.cs" />
     <Compile Include="Controllers\ProductCategoryController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helper\Session\SetSession.cs" />
     <Compile Include="Models\CartModel.cs" />
+    <Compile Include="Models\InvoiceModel.cs" />
+    <Compile Include="Models\PaypalConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -1395,6 +1402,7 @@
     <Content Include="Content\assets\css\vendors\slick-theme.css" />
     <Content Include="Content\assets\css\vendors\slick.css" />
     <Content Include="Content\assets\css\vendors\themify-icons.css" />
+    <Content Include="Content\assets\Email\Email.html" />
     <Content Include="Content\assets\fonts\feather\activity.svg" />
     <Content Include="Content\assets\fonts\feather\airplay.svg" />
     <Content Include="Content\assets\fonts\feather\alert-circle.svg" />
@@ -5697,9 +5705,15 @@
     <Content Include="Views\Cart\Index.cshtml" />
     <Content Include="Views\Shared\HeaderCart.cshtml" />
     <Content Include="Views\Cart\Checkout.cshtml" />
+    <Content Include="Views\Cart\Invoice.cshtml" />
+    <Content Include="Views\Cart\OrderPartialInvoice.cshtml" />
+    <Content Include="Views\NotFound\Index.cshtml" />
+    <Content Include="Views\Cart\Success.cshtml" />
+    <Content Include="Views\Cart\Failure.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\User\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -5715,6 +5729,10 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Email\Email.csproj">
+      <Project>{2B968ADA-FAEF-4A3C-A58E-C647BBFA72DF}</Project>
+      <Name>Email</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Model\Database.csproj">
       <Project>{856f1c4d-7386-49a1-a2b4-0ad16c4760b6}</Project>
       <Name>Database</Name>
