--- a/EshopMVC/bin/EshopMVC.dll.config
+++ b/EshopMVC/bin/EshopMVC.dll.config
@@ -5,14 +5,58 @@
   -->
 <configuration>
   <configSections>
+    <!-- Paypal Settings -->
+    <section name="paypal" type="PayPal.SDKConfigHandler, PayPal" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  
+  <!-->Paypal SDK Setting-->
+  <paypal>
+    <setting>
+      <add name="mode" value="sandbox"/>
+      <add name="clientId" value="Ab0AWm-7Xv_kMPSklTqvTrTK_LfGnLm5-2IY0RBA_0PHGzXF_UpB39JJKnSspzbrJDhwzg8_nE7yx8F1" />
+      <add name="clientSecret" value="ELaXOu5G0AbRv9jh24e8X61IFPfRoT4ZpibQW6_TakVVEtRaVeyAnnpdc3GNQdG6rjojG7pdJYyToSFn" />
+    </setting>
+  </paypal>
+
+  <!-- Log4net Settings -->
+  <log4net>
+    <appender name="FileAppender" type="log4net.Appender.FileAppender">
+      <file value="logs\log.txt" />
+      <appendToFile value="true" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="100" />
+      <layout type="log4net.Layout.PatternLayout">
+        <header value="[Header]&#xD;&#xA;" />
+        <footer value="[Footer]&#xD;&#xA;" />
+        <conversionPattern value="%date [%thread] %-5level %logger [%ndc] - %message%newline" />
+      </layout>
+    </appender>
+    <root>
+      <level value="DEBUG" />
+      <appender-ref ref="FileAppender" />
+    </root>
+  </log4net>
+
   <appSettings>
+    <!--Paypal Logger Sandbox-->
+    <add key="PayPalLogger" value="PayPal.Log.Log4netLogger" />
+    <!---->
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!--Email config-->
+    <add key="FromEmailAddress" value="nguyenhuyanh0110@gmail.com"/>
+    <add key="FromEmailPassword" value="Huy!anh1"/>
+    <add key="FromEmailDisplayName" value="Đơn hàng mới"/>
+    <add key="SMTPHost" value="smtp.gmail.com"/>
+    <add key="SMTPPort" value="587"/>
+    <add key="EnabledSSL" value="true"/>
+    <add key="ToEmailAddress" value="nguyenhuyanh0110@gmail.com"/>
   </appSettings>
   <system.web>
     <pages>
