complete fundamental function

--- a/EshopMVC/EshopMVC.csproj
+++ b/EshopMVC/EshopMVC.csproj
@@ -1945,6 +1945,28 @@
     <Content Include="Content\assets\fonts\ico\icofont.svg" />
     <Content Include="Content\assets\fonts\slick.svg" />
     <Content Include="Content\assets\fonts\themify.svg" />
+    <Content Include="Content\assets\Homepage\acer.jpg" />
+    <Content Include="Content\assets\Homepage\asus.jpg" />
+    <Content Include="Content\assets\Homepage\delllaptop.jpg" />
+    <Content Include="Content\assets\Homepage\dellmonitor.jpg" />
+    <Content Include="Content\assets\Homepage\gear.jpg" />
+    <Content Include="Content\assets\Homepage\headphone.jpg" />
+    <Content Include="Content\assets\Homepage\keyboard.jpg" />
+    <Content Include="Content\assets\Homepage\laptop.jpg" />
+    <Content Include="Content\assets\Homepage\laptop2.jpg" />
+    <Content Include="Content\assets\Homepage\LG.jpg" />
+    <Content Include="Content\assets\Homepage\logo.jpg" />
+    <Content Include="Content\assets\Homepage\mac.jpg" />
+    <Content Include="Content\assets\Homepage\monitor.jpg" />
+    <Content Include="Content\assets\Homepage\monitor2.jpg" />
+    <Content Include="Content\assets\Homepage\mouse.jpg" />
+    <Content Include="Content\assets\Homepage\premium.jpg" />
+    <Content Include="Content\assets\Homepage\rog.jpg" />
+    <Content Include="Content\assets\Homepage\router.jpg" />
+    <Content Include="Content\assets\Homepage\sony.jpg" />
+    <Content Include="Content\assets\Homepage\speaker.jpg" />
+    <Content Include="Content\assets\Homepage\storage.jpg" />
+    <Content Include="Content\assets\Homepage\wd.jpg" />
     <Content Include="Content\assets\images\2.jpg" />
     <Content Include="Content\assets\images\20.jpg" />
     <Content Include="Content\assets\images\21.jpg" />
@@ -4591,7 +4613,9 @@
     <Content Include="Content\assets\js\controller\base-controller.js" />
     <Content Include="Content\assets\js\controller\cart-controller.js" />
     <Content Include="Content\assets\js\controller\contact-controller.js" />
+    <Content Include="Content\assets\js\controller\menu-filter.js" />
     <Content Include="Content\assets\js\controller\register-controller.js" />
+    <Content Include="Content\assets\js\controller\sub-menu.js" />
     <Content Include="Content\assets\js\counter\counter-custom.js" />
     <Content Include="Content\assets\js\counter\jquery.counterup.min.js" />
     <Content Include="Content\assets\js\counter\jquery.waypoints.min.js" />
