--- a/EshopMVC/Web.config
+++ b/EshopMVC/Web.config
@@ -57,8 +57,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!--Email config-->
-    <add key="FromEmailAddress" value="nguyenhuyanh0110@gmail.com" />
-    <add key="FromEmailPassword" value="Huy!anh1" />
+    <add key="FromEmailAddress" value="" />
+    <add key="FromEmailPassword" value="" />
     <add key="FromEmailDisplayName" value="Đơn hàng mới" />
     <add key="SMTPHost" value="smtp.gmail.com" />
     <add key="SMTPPort" value="587" />
